syntax = "proto3";
package order;
option go_package = "./pb";

message Order {
    message OrderProduct {
        string id = 1;
        string name = 2;
        string description = 3;
        double price = 4;
        uint64 quantity = 5;
    }
    string id = 1;
    bytes createdAt = 2;
    string accountId = 3;
    double totalPrice = 4;
    repeated OrderProduct Products = 5;
}

message PostOrderRequest{
    message OrderProduct{
        string productId = 2;
        uint64 quantity = 3;
    } 
    string AccountId = 2;
    repeated OrderProduct Products = 3;
}
message PostOrderResponse{
    Order Order = 1;
}
message GetOrderRequest{
    string id = 1;
}
message GetOrderResponse{
    Order order = 1;
}
message GetOrderForAccountRequest{
    string accountId = 1;
}
message GetOrderForAccountResponse{
    repeated Order orders = 1;
}
service OrderService {
    rpc PostOrder (PostOrderRequest) returns (PostOrderResponse);
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
    rpc GetOrderForAccount (GetOrderForAccountRequest) returns (GetOrderForAccountResponse);
}